# osbTools

./: CMakeLists.txt  LICENSE  Makefile  README.md  osbTools.mod.in
cmake/modules/: FindMaya.cmake  version.cmake
mel/: cleanUpScene.mel  osbSanityChecker.mel  osbSanityCheckerAPI.mel
mel/checks/geo/: osbSanity11EdgesAtOnePoint.mel  osbSanityBorders.mel  osbSanityDeleteHistory.mel  osbSanityDeleteLayersAndDagNodes.mel  osbSanityDeleteShadersApplyLambert.mel  osbSanityHolesBorder.mel  osbSanityLaminaFaces.mel  osbSanityMoreThanFourEdges.mel  osbSanityNonManifoldFaces.mel  osbSanityNormals.mel  osbSanityWarnRefMaterial.mel  osbSanityZeroLengthEdges.mel
mel/checks/naming/: osbSanityNameClashes.mel  osbSanityNameEndings.mel  osbSanityNumberPadding.mel
mel/checks/transform/: osbSanityFreezTransforms.mel  osbSanityGeoAtZero.mel  osbSanityTopGroupNodeToZero.mel
mel/checks/uv/: osbSanityUVBorders.mel  osbSanityUVOverlapping.mel  osbSanityUVShellsOverlapping.mel  osbSanityUVsInRightGrid.mel  osbSanityUVsReversed.mel
pkgconfig/: maya-2011sp1.pc  maya-2012sp1.pc  maya-2013sp1.pc  maya2011.pc  maya2012.pc  maya2013.pc
py/: InheritParentsName.py  NewtonRenaming.py  ResolveDuplicates.py
src/: CMakeLists.txt  Renaming.cpp  Renaming.h  UVCommon.cpp  UVCommon.h  UVReversed.cpp  UVReversed.h  UVSeams.cpp  UVSeams.h  holesBorder.cpp  holesBorder.h  intersect.cpp  intersect.h  overlappingUVShells.cpp  overlappingUVShells.h  pluginMain.cpp  triangleOverlappingTest.cpp
ui/: osbSanityCheckHelp.py  osbSanityCheckHelp_UI.py  osbSanityCheckHelp_UI.ui
windows/: newton.sln  newton.sln.old  newton.vcproj
